k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iteria
  labels:
    name: iteria
